--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -14,12 +14,13 @@ jobs:
     steps:
       - name: PR Agent action step
         id: pragent
-        uses: docker://codiumai/pr-agent:0.23-github_action
+        uses: docker://codiumai/pr-agent:0.29-github_action
         env:
+          CONFIG.MODEL: "gpt-4.1"
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           response_language: "ja-JP"
-          pr_description.extra_instructions: Japanese in descriptions. Titles should have prefix of commitlint pattern such as `feat:`, `chore:`, `test:`, `fix:`, `ci:`, `docs:` etc'
-          pr_reviewer.extra_instructions: 'Please use Japanese in descriptions.'
-          pr_code_suggestions.extra_instructions: 'Please use Japanese in descriptions.'
-          pr_update_changelog.extra_instructions: 'Please use Japanese in descriptions.'
+          pr_description.extra_instructions: "必ず全て日本語で記述してください。" 
+          pr_reviewer.extra_instructions: "必ず全て日本語で記述してください。" 
+          pr_code_suggestions.extra_instructions: "必ず全て日本語で記述してください。" 
+          pr_update_changelog.extra_instructions: "必ず全て日本語で記述してください。" 
